--- a/index.html
+++ b/index.html
@@ -1,9 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=>, initial-scale=1.0">
+    <meta name="author" content="Chimpzion">
+    <meta name="description" content="New Generation Creation">
+    <style>
+        h1{text-align: center;}
+        p{font-family:'Times New Roman', Times, serif;}
+        p{font-weight: bold;}
+        h2{text-decoration: underline;}
+        div {
+    background: linear-gradient(to right, #800000 0%, #0e0e02 100%);
+    font-size: 20px;
+    text-align: center;
+}
+
+    </style>
+
+    <title>Portfolio Of Oona Jakobsson</title>
+</head>
+<body style="background-color:rgb(83, 3, 3);" >
+    <div>
+    <h1 style="color:white" >OJ</h1>
     
-<body>
-    <h1>Portfolio</h1>
-    
-</body>
-</html>
+
+    <h2 style="color:white">Hey there!</h2>
+   
