--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="New Generation Creation">
     <style>
         h1{text-align: center;}
+        h1{font-size: 450px;}
         p{font-family:'Times New Roman', Times, serif;}
         p{font-weight: bold;}
         h2{text-decoration: underline;}
