--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <h2 style="color:white">Hey there!</h2>
         
-        <p style="color:white">You found yourself to the portfolio page of Oona Jakobsson, a developer & designer.<br>
+        <p style="color:white">You found yourself to the portfolio of Oona Jakobsson, a developer & designer.<br>
         Let's start by learning a bit about who I am.</p>
 
     
