--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         p{font-family:'Times New Roman', Times, serif;}
         p{font-weight: bold;}
         h2{text-decoration: underline;}
+        h2{text-align:center;}
         </style>
 
         
