--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         p{font-weight: bold;}
         h2{text-decoration: underline;}
         h2{text-align:center;}
+        p{text-align:center;}
         </style>
 
         
